<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivDetailPoster"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetailTitle"
                    android:textSize="26sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="6"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="@string/titleFilm" />

                <ImageButton
                    android:id="@+id/imageButtonStar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="invisible"
                    android:background="@color/white"
                    app:srcCompat="@android:drawable/btn_star_big_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDetailType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="Movie" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:visibility="invisible"
                    android:text="@string/year_detail"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDetailYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="1977" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Plot" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>